--- a/app/src/css/Page.css
+++ b/app/src/css/Page.css
@@ -1,6 +1,9 @@
 .page{
     padding: 30px 20px 20px 20px;
     color: white;
+    position:relative;
+    width: calc(100% - 40px);
+    text-align: center;
 }
 .page .headline {
     font-size: 30px;
